<resources>
    <string name="app_name">MVVM_Example</string>
    <string name="pixelpro_digital">PixelPro Digital</string>
    <string name="username">Your Email:</string>
    <string name="password">Your Password:</string>
    <string name="pixelpro_login">PixelPro Login</string>
    <string name="home_page">Home Page</string>
    <string name="signup_with_email">SignUp with Email</string>
    <string name="email">Email</string>
    <string name="signup_page">SignUp Page</string>
    <string name="register">Register</string>
</resources>