<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

<data>
    <variable
        name="viewModel"
        type="com.tutsplus.mvvm_example.MainViewModel" />
</data>
<!--    tools:context=".MainActivity"-->
<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    >



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/pixelpro_digital"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        />


    <EditText
        android:id="@+id/UserNameEditTextView"
        android:layout_width="310dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_edit_text"
        />

    <TextView
        android:id="@+id/PasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rectangle_edit_text"
        >
        <EditText
            android:id="@+id/PasswordEditTextView"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/rectangle_edit_text_invisible"
            />

        <ImageView
            android:id="@+id/togglePasswordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:src="@drawable/baseline_disabled_visible_24" />


    </LinearLayout>



    <Button
        android:id="@+id/loginButtonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48sp"
        android:layout_marginTop="75sp"
        android:layout_marginRight="48sp"
        android:backgroundTint="@color/dark_blue"
        android:drawableLeft="@drawable/sharp_density_small_24"
        android:text="@string/pixelpro_login"
        android:onClick="@{()->viewModel}"
        />
    <!--        android:onClick="login"-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/dark_blue"
        android:onClick="@{()->viewModel.signUp()}"
        android:text="@string/register"
        />
<!--    android:onClick="signUp"-->

</LinearLayout>
</layout>